--- a/css/styles.css
+++ b/css/styles.css
@@ -18,8 +18,9 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family:"Roboto Condensed" "Arial", sans-serif;
   font-size: 16px;
+  font-weight: 400;
   line-height: 1.5;
   background-color: #fff;
   color: #222;
@@ -28,6 +29,11 @@ body {
 img {
   max-width: 100%;
   height: auto;
+}
+
+*:focus {
+  outline: 2px dashed #1e90ff;
+  outline-offset: 2px;
 }
 
 /* CONTAINER */
@@ -45,4 +51,237 @@ img {
 
 .main-content {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+
+/* CONTENT-WRAPPER */
+
+.content-wrapper {
+  flex-grow: 1;
+  display: flex;
+  width: 100%;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+/* HERO */
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  max-width: 600px;
+  padding: 24px;
+  background-image: url(../img/main-img.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center bottom;
+}
+.hero-content {
+  max-width: 285px;
+}
+.hero-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-size: 24px;
+  font-family: "Bebas Neue", "Roboto Condensed", "Arial", sans-serif;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 2px;
+  color: #fff;
+  text-transform: uppercase;
+}
+.hero-link {
+  display: inline-block;
+  font-family: "Bebas Neue", "Roboto Condensed", "Arial", sans-serif;
+  background-color:#1e90ff;
+  color:#fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.hero-link:hover {
+  background-color: rgba(30, 144, 255, 0.8);
+}
+
+.hero-link:active {
+  background-color: rgba(30, 144, 255, 0.6);
+}
+.hero-link-inner {
+  display: flex;
+  padding: 12px 24px;
+}
+
+.hero-link-inner::before {
+  width: 20px;
+  height: 20px;
+  margin-right: 12px;
+  background-image: url(../img/Vector.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  content:"";
+}
+
+
+/* LATEST-VIDEOS */
+
+
+.latest-videos {
+  width: 100%;
+  max-width: 600px;
+  padding: 54px;
+}
+.latest-videos-heading {
+  margin-top: 0;
+  margin-bottom: 24px;
+  font-family: "Bebas Neue", "Roborto Condensed", "Arial", sans-serif;
+  font-size: 24px;
+  line-height: normal;
+  font-weight: 400;
+
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+.latest-videos-divider {
+  border: 0;
+  height: 1px;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  background-color:#999;
+}
+.latest-videos-lists {
+  padding: 0;
+  margin: 0;
+  margin-bottom: 24px;
+  list-style: none;
+
+}
+.latest-videos-item:not(:last-child) {
+  margin-bottom: 10px;
+}
+.item-latest-videos {
+  display: flex;
+
+}
+.item-latest-videos-img {
+  width: 160px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px;
+
+
+}
+.item-latest-videos-info {
+  padding: 16px;
+
+}
+.item-latest-videos-heading {
+  margin-top: 0;
+  margin-bottom: 4px;
+  font-family: "Bebas Neue", "Roborto Condensed", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: normal;
+  font-weight: 400;
+  letter-spacing: 2px;
+
+}
+
+.item-latest-videos-link {
+  display: inline-block;
+  color:#222;
+  text-decoration: none;
+
+}
+
+.item-latest-videos-link:hover {
+  color:#1e90ff;
+}
+
+.item-latest-videos-link:active {
+  opacity: 0.6;
+}
+.item-latest-videos-meta {
+  display: flex;
+  align-items:center;
+  color: #888;
+  font-size: 14px;
+  line-height: normal;
+
+}
+.item-latest-videos-meta-item {
+  display: flex;
+  align-items:center;
+
+}
+
+.item-latest-videos-meta-item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.item-latest-videos-meta-item::before {
+  width: 16px;
+  height: 16px;
+  margin-right: 4px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
+  content:"";
+
+}
+
+.item-latest-videos-meta-item-published-at::before {
+  background-image: url(../img/icon-clock.svg);
+}
+
+.item-latest-videos-meta-item-views::before {
+  background-image: url(../img/eyes.svg);
+}
+
+/* Buuton */
+
+.load-more-button {
+  display: block;
+  width: 100%;
+  padding: 12px;
+  border-radius:4px;
+  border:0;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: normal;
+  background-color: #1e90ff;
+  color: #fff;
+  cursor: pointer;
+}
+
+.load-more-button:hover {
+  background-color: rgba(30, 144, 255, 0.8);
+
+}
+
+.load-more-button:active {
+  background-color: rgba(30, 144, 255, 0.6);
+}
+
+
+
+/* RETINA IMG */
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+  .hero {
+    background-image: url(../img/main-img@2x.jpg);
+  }
+
 }
